--- a/src/components/NamespacePage.module.css
+++ b/src/components/NamespacePage.module.css
@@ -7,12 +7,17 @@
 }
 
 .title {
+  display: none;
   font-size: var(--font-size-xl);
   font-weight: var(--font-weight-medium);
   font-family: var(--font-family-sans);
   line-height: 1;
   margin: 0;
   color: var(--color-text-primary);
+
+  @media (min-width: 64rem) {
+    display: block;
+  }
 }
 
 .card {
